<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dietasapp.ui.home.HomeFragment"
        android:label="@string/menu_calcular_dieta"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.dietasapp.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.dietasapp.ui.history.HistoryFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.dietasapp.ui.settings.SettingsFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_settings" />
</navigation>